# ibei

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build-test.yml  create-release-from-version-tag.yml  upload-to-test-pypi.yml
conda.recipe/: build.sh  meta.yaml  run_test.py
doc/: Makefile  api.rst  bib.bib  conf.py  index.rst
electrode/: physicalproperty.py
ibei/: __init__.py  devossolarcell.py  main.py  sqsolarcell.py  uibei.py
physicalproperty/: __init__.py  physicalproperty.py
src/ibei/: __init__.py  models.py  sqsolarcell.py
test/: test_BEI.py  test_DeVosSolarcell.py  test_PhysicalProperty.py  test_SBSolarcell.py  test_classes.py  test_find_PhysicalProperty.py  test_iebi.py  test_uiebi.py
